# project-index

./: .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  SPEC.md  skills-lock.json
.agents/skills/project-index-release/: SKILL.md
.github/workflows/: release.yml
app/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: agent.rs  cli.rs  config.rs  github.rs  lib.rs  project.rs  skills.rs
docs/: README.md  provider-table.md  status.md
docs/adr/: 0001-read-only-work-index.md  0002-tauri-desktop-companion.md  0003-observation-refresh-architecture.md  0004-local-observation-storage.md
docs/agents/: README.md  claude.md  gemini.md
docs/architecture/: overview.md
