[package]
name = "project-index"
version = "0.2.2"
edition = "2024"
description = "A read-only terminal work index for humans and agents — projects, git state, sessions, memories, skills, and MCP config in one surface."
license = "MIT"
repository = "https://github.com/whaleen/project-index"
homepage = "https://github.com/whaleen/project-index"
keywords = ["tui", "terminal", "developer-tools", "agents", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[[bin]]
name = "px"
path = "src/bin/px.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ureq = "2"
